--- a/pensando-em-ht-cs.html
+++ b/pensando-em-ht-cs.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- width é largura height é altura -->
+    <div style="width: 120px; height: 120px; background: red;"></div>
     
 </body>
 </html>
